--- a/home.html
+++ b/home.html
@@ -5,8 +5,7 @@
     <title>Learn Heroku!</title>
   </head>
   <body>
-    <h1>Aula Heroku Leo Soares!</h1>
-    <h3> Renato o brabo </h3>
+    <h1>Aula Heroko!</h1>
 <style>
 h1 {
   color: teal;
